# fastapi-starter

./: .all-contributorsrc  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json
.github/: dependabot.yml
.github/workflows/: cookiecutter-project-test.yml  deploy-demo.yml  pre-commit.yaml
fastapi-saas/backend/: Dockerfile
scripts/: deploy-demo-project-to-fly.sh  fly.toml  test.sh
{{cookiecutter.project_slug}}/: .dockerignore  .env  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  env-ci  env-template
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: pre-commit.yaml  test.yaml
{{cookiecutter.project_slug}}/backend/: Dockerfile  main.py  pyproject.toml  shell.py
{{cookiecutter.project_slug}}/backend/alembic/: env.py  script.py.mako
{{cookiecutter.project_slug}}/backend/alembic/versions/: 14bc3b4ecc3a_add_item_migration.py  300f83cfa266_first_migration_with_users_table.py  5c89a726934c_add_item_migration.py  7e09fa75df7a_add_initial_migration.py
{{cookiecutter.project_slug}}/backend/app/: app.py  db.py  factory.py
{{cookiecutter.project_slug}}/backend/app/api/: __init__.py  items.py  users.py  utils.py
{{cookiecutter.project_slug}}/backend/app/api/crud/: _crudrouter.py  item.py
{{cookiecutter.project_slug}}/backend/app/core/: config.py  logger.py
{{cookiecutter.project_slug}}/backend/app/models/: __init__.py  item.py  user.py
{{cookiecutter.project_slug}}/backend/app/schemas/: item.py  request_params.py  user.py
{{cookiecutter.project_slug}}/backend/static/: index.html
{{cookiecutter.project_slug}}/backend/tests/: conftest.py  utils.py
{{cookiecutter.project_slug}}/backend/tests/api/: test_items.py  test_utils.py
{{cookiecutter.project_slug}}/backend/tests/models/: test_user.py
{{cookiecutter.project_slug}}/frontend/: .prettierignore  Dockerfile  nginx.conf  package.json
{{cookiecutter.project_slug}}/frontend/cypress/e2e/: app.cy.js
{{cookiecutter.project_slug}}/frontend/cypress/integration/: app.js
{{cookiecutter.project_slug}}/frontend/cypress/support/: commands.js
{{cookiecutter.project_slug}}/frontend/public/: index.html  manifest.json
{{cookiecutter.project_slug}}/frontend/src/: App.test.tsx  App.tsx
{{cookiecutter.project_slug}}/frontend/src/components/: AdminLayout.tsx  Auth.tsx  ProfileEdit.tsx  authStyles.tsx
{{cookiecutter.project_slug}}/frontend/src/pages/: Auth.tsx  Dashboard.test.tsx  Dashboard.tsx  Items.tsx  Login.test.tsx  Login.tsx  ProfileEdit.tsx  Register.test.tsx  Register.tsx  Users.tsx
{{cookiecutter.project_slug}}/frontend/src/providers/: authProvider.ts  env.ts
